Full screen card now works correctly.

--- a/NetExplorer/templates/NetExplorer/contig_card.html
+++ b/NetExplorer/templates/NetExplorer/contig_card.html
@@ -1,3 +1,6 @@
+{% extends base_template %}
+
+{% block content %}
 {% load static %}
 <!--NOT NECESSARY
 <link rel="stylesheet" href="{% static 'css/style.css' %}">
@@ -266,75 +269,106 @@
         <br>
         <br>
     </body>
+    {% endblock content %}
+
+
+    {% block scripts %}
 
     <script src="{% static 'js/root.js' %}"></script>
-    <script src="{% static 'js/jquery-data-tables-min.js' %}"></script>
-    <script>
-        $('.card-link').click(function() {
-            var card_data = {
-                div_id      : $(this).closest('.card-overlay').attr("id"),
-                current     : $(this).attr("current"),
-                currentDB   : $(this).attr("currentDB"),
-                target      : $(this).attr("target"),
-                targetDB    : $(this).attr("targetDB"),
-                csrfmiddlewaretoken: '{{ csrf_token }}'
-            }
-            var new_url = window.location.href;
-            history.pushState(card_data, null, new_url);
-
-            // Load Get request html on current card-overlay
-            $.ajax({
-                type: "GET",
-                context: this, //this makes the this variable visible inside the success
-                url: "{% url 'get_card' %}",
-                cache: true,
-                data: {
-                    'target'    : card_data['target'],
-                    'current'   : card_data['current'],
-                    'targetDB'  : card_data['targetDB'],
-                    'currentDB' : card_data['currentDB'],
-                    'csrfmiddlewaretoken': '{{ csrf_token }}'
-                },
-                success : function(data) {
-                    $(this).closest('.card-overlay').html(data)
-                   
-                }
-            });
-
-
-        });
-
-        // browser. If that's the case, it will update the content of the "visible"
-        // card-div.
-        window.onpopstate = function(event) {
-            if (event.state != null){
-                $.ajax({
-                    type: "GET",
-                    context: this, //this makes the this variable visible inside the success
-                    url: "{% url 'get_card' %}",
-                    cache: true,
-                    data: {
-                        'target'    : event.state['target'],
-                        'targetDB'  : event.state['targetDB'],
-                        'csrfmiddlewaretoken': '{{ csrf_token }}'
-                    },
-                    success : function(data) {
-                        if ( $(".card-overlay").is(':hidden')  ){
-                            $('[id="card-overlay"]').slideToggle(450);
-                            $('.close-overlay').slideToggle(450);
-                            $('.full-screen-card').slideToggle(450);
-                        }
-                        $('.card-overlay:visible').html(data)
+    
+    {% if base_template == "NetExplorer/null.html" %}
+    <!-- AJAX REQUEST; GENE CARD OVERLAY -->
+        <script src="{% static 'js/jquery-data-tables-min.js' %}"></script>
+        <script>
+                $('.card-link').click(function() {
+                    var card_data = {
+                        div_id      : $(this).closest('.card-overlay').attr("id"),
+                        current     : $(this).attr("current"),
+                        currentDB   : $(this).attr("currentDB"),
+                        target      : $(this).attr("target"),
+                        targetDB    : $(this).attr("targetDB"),
+                        csrfmiddlewaretoken: '{{ csrf_token }}'
                     }
+                    var new_url = window.location.href;
+                    history.pushState(card_data, null, new_url);
+        
+                    // Load Get request html on current card-overlay
+                    $.ajax({
+                        type: "GET",
+                        context: this, //this makes the this variable visible inside the success
+                        url: "{% url 'get_card' %}",
+                        cache: true,
+                        data: {
+                            'target'    : card_data['target'],
+                            'current'   : card_data['current'],
+                            'targetDB'  : card_data['targetDB'],
+                            'currentDB' : card_data['currentDB'],
+                            'csrfmiddlewaretoken': '{{ csrf_token }}'
+                        },
+                        success : function(data) {
+                            $(this).closest('.card-overlay').html(data)
+                        
+                        }
+                    });
+        
+        
                 });
-            } else {
-                $('.card-overlay').hide(250);
-                $('.close-overlay').hide();
-                $('.full-screen-card').hide();
-            }
-        };
+        
+                // browser. If that's the case, it will update the content of the "visible"
+                // card-div.
+                window.onpopstate = function(event) {
+                    if (event.state != null){
+                        $.ajax({
+                            type: "GET",
+                            context: this, //this makes the this variable visible inside the success
+                            url: "{% url 'get_card' %}",
+                            cache: true,
+                            data: {
+                                'target'    : event.state['target'],
+                                'targetDB'  : event.state['targetDB'],
+                                'csrfmiddlewaretoken': '{{ csrf_token }}'
+                            },
+                            success : function(data) {
+                                if ( $(".card-overlay").is(':hidden')  ){
+                                    $('[id="card-overlay"]').slideToggle(450);
+                                    $('.close-overlay').slideToggle(450);
+                                    $('.full-screen-card').slideToggle(450);
+                                }
+                                $('.card-overlay:visible').html(data)
+                            }
+                        });
+                    } else {
+                        $('.card-overlay').hide(250);
+                        $('.close-overlay').hide();
+                        $('.full-screen-card').hide();
+                    }
+                };
+        
+        </script>
 
-    </script>
+    {% else %}
+    <!-- FULL SCREEN CARD -->
+        <script>
+            $('.card-link').click(function() {
+                var div_id       = $(this).closest('.card-overlay').attr("id");
+                var current      = $(this).attr("current");
+                var currentDB    = $(this).attr("currentDB");
+                var target       = $(this).attr("target");
+                var targetDB     = $(this).attr("targetDB");
+                window.location = window.ROOT + "/gene_card/" + targetDB + "/" + target;
+
+            });
+        </script>
+
+        <style>
+            #body-wrapper {
+                margin-left: 15%;
+                margin-right: 15%;
+            }
+        </style>
+        
+    {% endif %}
+    
 
     {% if domains %}
         <script>
@@ -555,26 +589,19 @@
         </script>
     {% endif %}
 
-    <script>
-        $(document).ready(function(){
-            $.fn.dataTable.ext.errMode = 'throw';
-            if (! $.fn.DataTable.isDataTable( '#int-table' )) {
-                $('#int-table').DataTable({
-                    "order": [[ 1, "desc" ]]
-                });
-            }
-        });
-    </script>
+        <script>
+            $(document).ready(function(){
+                $.fn.dataTable.ext.errMode = 'throw';
+                if (! $.fn.DataTable.isDataTable( '#int-table' )) {
+                    $('#int-table').DataTable({
+                        "order": [[ 1, "desc" ]]
+                    });
+                }
+            });
+        </script>
 
+        
+    {% endblock scripts %}
 </html>
 
-<!--
-<table id='pfam-line-table' class='table table-hover'>
-    <tbody>
-        <tr class='pfam-line-table-row'>
-            <img src='/static/Images/pfam-line.png' style='width:254; margin-left:37'>
-        </tr>
-        <tr class='pfam-line-table-row'>
-            <img src='/static/Images/pfam-line.png' style='width:212; margin-left:68'>
-        </tr></tbody></table>
--->
+
