--- a/NetExplorer/templates/NetExplorer/datasets.html
+++ b/NetExplorer/templates/NetExplorer/datasets.html
@@ -6,7 +6,7 @@
 
 
 {% block content %}
-    <h2>Transcriptomes</h2>
+    <h2>Datasets</h2>
     <hr>
 
     <!-- Overlay for bigger images -->
@@ -28,6 +28,42 @@
 
 
     <!-- TRANSCRIPTOMES DIVS -->
+    <div class="panel panel-default panel-transcriptome">
+        <div class="panel-heading">
+            <a class="about-title" name="Smesgene">
+                <h4><img class='legend-db' src="{% static 'Images/legend-' %}Smesgene.png"/>Smesgene</h4>
+            </a>
+        </div>
+        <div class="panel-body">
+            <div class="row row-eq-height">
+                <div class="col-sm-12 col-xs-12 ">
+                    <div class="transcriptome-table-div">
+                        <table class="table table-hover transcriptome-table">
+                            <thead>
+                            <thead>
+                            <tbody>
+                                <tr>
+                                    <td class="text-right"><strong>Publication</strong></td> 
+                                    <td> <a href="https://www.nature.com/articles/nature25473" target="_blank"> Grohme, M.A. et al. (2018)<br>The genome of Schmidtea mediterranea and the evolution of core cellular mechanisms<br>Nature volume 554, pages 56–61. </a> </td>
+                                </tr>
+                                <tr>
+                                    <td class="text-right"><strong>Year</strong></td> <td>2018</td>
+                                </tr>
+                                <tr>
+                                    <td class="text-right"><strong>Number of Scaffolds</strong></td> <td>481</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+               
+            </div>
+        </div>
+                    
+    </div>
+
+
+
     {% for db in databases %}
         <div class="panel panel-default panel-transcriptome">
             <div class="panel-heading">
