--- a/NetExplorer/templates/NetExplorer/smesgene_card.html
+++ b/NetExplorer/templates/NetExplorer/smesgene_card.html
@@ -62,6 +62,7 @@
 
     <h2><span class="glyphicon glyphicon-tag"></span> Gene location</h2>
     <hr class="h2-sep">
+    <span class="location-contig">Chromosome: {{ node.chromosome }} </span>
     <iframe id="jbrowser" width="100%" height="400px" src="https://compgen.bio.ub.edu/jbrowse/index.html?data=dd_Smes_g4&loc={{ node.chromosome }}%3A{{ node.start }}..{{ node.end }}&tracks=refseq%2Cgenes&overview=1&highlight=&tracklist=0&highres=2"></iframe> 
 
     <h2><span class="glyphicon glyphicon-tag"></span> Transcripts</h2>
