Added ability to map colors to planexp network using experiment absolute scale, or only network scale.

--- a/NetExplorer/static/css/style.css
+++ b/NetExplorer/static/css/style.css
@@ -2455,3 +2455,6 @@ summary { display: list-item !important; }
     color: #396494;
     margin-bottom: 15px;
 }
+
+.radio-title { display: block; font-weight: bold; margin-top: 10px; }
+.color-reference { font-weight: normal; margin-right: 10px; }
