--- a/NetExplorer/templates/NetExplorer/planexp.html
+++ b/NetExplorer/templates/NetExplorer/planexp.html
@@ -250,6 +250,9 @@
                                 <div id="blue" class="color-pick gradient-blue"></div>
                                 <div id="green" class="color-pick gradient-green"></div>
 
+
+
+
                             </div>
                             <div id="two-sample" class="tab-pane fade in">
                                 <!-- TWO SAMPLES -->
@@ -266,6 +269,12 @@
                                 <div id="yellow_blue" class="color-pick gradient-yellow-to-blue"></div>
                                 <div id="red_green" class="color-pick gradient-red-to-green"></div>
                             </div>
+
+                            <span class="radio-title">Reference:</span>
+                            <input id="reference-experiment" type="radio" name="color-reference" value="Experiment">
+                            <label class="color-reference" for="reference-experiment">Experiment</label>
+                            <input id="reference-network" type="radio" name="color-reference" value="Network">
+                            <label class="color-reference" for="reference-network">Network</label>
                         </div>
 
                         
