--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2269,9 +2269,9 @@ kbd {
 .gradient-blue {  background-image: linear-gradient(#0029ff, #f7f8ff); }
 .gradient-red {  background-image: linear-gradient(#ff0000, #fffafa); }
 .gradient-green {  background-image: linear-gradient(#42d242, #f9fff9); }
-.gradient-blue-to-red { background-image: linear-gradient(#d62728, white, #1f77b4) }
-.gradient-yellow-to-blue { background-image: linear-gradient(#1f77b4, white, #e4a32d); }
-.gradient-red-to-green { background-image: linear-gradient(#2ca02c, white, #d62728); }
+.gradient-blue-to-red { background-image: linear-gradient(#d62728, white, #0029ff) }
+.gradient-yellow-to-blue { background-image: linear-gradient(#0029ff, white, #e4a32d); }
+.gradient-red-to-green { background-image: linear-gradient(#42d242, white, #d62728); }
 
 
 .color-pick.active { border: solid 2px #777777; opacity: 1; }
