Planexp color legend added.

--- a/NetExplorer/templates/NetExplorer/planexp.html
+++ b/NetExplorer/templates/NetExplorer/planexp.html
@@ -231,6 +231,7 @@
 
                 <div id="planexp-cyt-wrapper">
                     <div id="planexp-cyt"> </div>
+                    <div id="planexp-cyt-legend"></div>
                     <div id="planexp-cyt-controls">
                         <h3>Color Genes:</h3>
 
@@ -251,7 +252,7 @@
                                 <div id="green" class="color-pick gradient-green"></div>
 
                                 <span class="radio-title">Reference:</span>
-                                <input id="reference-network" type="radio" name="color-reference" value="Network">
+                                <input id="reference-network" type="radio" name="color-reference" value="Network" checked>
                                 <label class="color-reference" for="reference-network">Network</label>
                                 <input id="reference-experiment" type="radio" name="color-reference" value="Experiment">
                                 <label class="color-reference" for="reference-experiment">Experiment</label>
