--- a/NetExplorer/static/css/style.css
+++ b/NetExplorer/static/css/style.css
@@ -2458,3 +2458,21 @@ summary { display: list-item !important; }
 
 .radio-title { display: block; font-weight: bold; margin-top: 10px; }
 .color-reference { font-weight: normal; margin-right: 10px; }
+
+
+#planexp-cyt-legend {
+    position: absolute;
+    top: 1px;
+    left: 1px;
+    width: 50px;
+    height: 718px;
+    bottom: 1px;
+}
+
+
+.grid-legend {
+    display: grid;
+    height: 14.3px;
+    width: 25px;
+    grid-template-columns: 25px;
+}
