--- a/NetExplorer/templates/NetExplorer/pathway_finder.html
+++ b/NetExplorer/templates/NetExplorer/pathway_finder.html
@@ -363,6 +363,7 @@
                             maxSimulationTime: 3000,
                             fit: true,
                             directed: false,
+                            cols: {{ plen|add:"1" }},
                             padding: 40
                         });
 
