--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2492,5 +2492,6 @@ summary { display: list-item !important; }
     text-align: center;
 }
 
-.about-img { width: 350px; border: 2px solid #E7E7E7; margin-top: 10px; margin-bottom: 25px;}
+.about-img { width: 350px; border: 2px solid #E7E7E7; margin-top: 10px; margin-bottom: 10px;}
+.about-img:hover { opacity: 0.65; }
 .about-img-container { text-align: center; }
