FIXES to some templatex.

--- a/NetExplorer/templates/NetExplorer/about.html
+++ b/NetExplorer/templates/NetExplorer/about.html
@@ -49,7 +49,7 @@
 
     <br>
     <br>
-    <h2 id="update-notes">About the PPI predictor</h2>
+    <h2 id="predictor">About the PPI predictor</h2>
     <hr>
     <p>
         PlanNET uses a <a href="https://en.wikipedia.org/wiki/Random_forest" target="_blank">Random Forest classifier</a> in order to predict protein-protein interactions for the planaria Schmidtea mediterranea, by using a reference human network. 
