--- a/NetExplorer/templates/NetExplorer/contig_card.html
+++ b/NetExplorer/templates/NetExplorer/contig_card.html
@@ -155,6 +155,16 @@
                                         </td>  </tr>
                                 </table>
                             {% endif %}
+                        
+                        <br>
+                        <h2><span class="glyphicon glyphicon-tag"></span> Genomic location</h2>
+                        <hr class="h2-sep">
+                            
+                        {% if node.database == "Smest" or node.database == "Dresden" %}
+                            <iframe id="jbrowser" width="100%" height="400px" src="https://compgen.bio.ub.edu/jbrowse/index.html?data=dd_Smes_g4&loc={{ node.symbol }}&tracks=Smes_g4 Genome Scaffolds,SmesG_v2 Reference Genes,Dresden Transcripts&overview=1&highlight=&tracklist=1&highres=2"></iframe>    
+                        {% else %}
+                            <iframe id="jbrowser" width="100%" height="400px" src="https://compgen.bio.ub.edu/jbrowse/index.html?data=dd_Smes_g4&loc={{ node.symbol }}&tracks=Smes_g4 Genome Scaffolds,SmesG_v2 Reference Genes,Dresden Transcripts,{{ node.database }} Transcripts&overview=1&highlight=&tracklist=1&highres=2"></iframe>
+                        {% endif %}
 
                         <br>
                         <h2><span class="glyphicon glyphicon-tag"></span> Gene Ontologies</h2>
