--- a/NetExplorer/templates/NetExplorer/smesgene_card.html
+++ b/NetExplorer/templates/NetExplorer/smesgene_card.html
@@ -62,8 +62,17 @@
 
     <h2><span class="glyphicon glyphicon-tag"></span> Gene location</h2>
     <hr class="h2-sep">
-    <span class="location-contig">Chromosome: {{ node.chromosome }} </span>
-    <iframe id="jbrowser" width="100%" height="400px" src="https://compgen.bio.ub.edu/jbrowse/index.html?data=dd_Smes_g4&loc={{ node.chromosome }}%3A{{ node.start }}..{{ node.end }}&tracks=refseq%2Cgenes&overview=1&highlight=&tracklist=0&highres=2"></iframe> 
+    <span class="location-contig">Chromosome:</span> <b>{{ node.chromosome }} </b><br>
+    <span class="location-contig">Location:</span> <b>{{ node.start }} .. {{ node.end }} 
+        {% if node.strand == "1" %}
+            (+)
+        {% else %}
+            (-)
+        {% endif %}
+    </b><br><br>
+
+    <iframe id="jbrowser" width="100%" height="400px" src="https://compgen.bio.ub.edu/jbrowse/index.html?data=dd_Smes_g4&loc={{ node.symbol }}&tracks=Smes_g4 Genome Scaffolds,SmesG_v2 Reference Genes,Dresden.v6 Transcripts&overview=1&highlight=&tracklist=1&highres=2"></iframe>
+    <!--<iframe id="jbrowser" width="100%" height="400px" src="https://compgen.bio.ub.edu/jbrowse/index.html?data=dd_Smes_g4&loc={{ node.chromosome }}%3A{{ node.start }}..{{ node.end }}&tracks=refseq%2Cgenes&overview=1&highlight=&tracklist=0&highres=2"></iframe> -->
 
     <h2><span class="glyphicon glyphicon-tag"></span> Transcripts</h2>
     <hr class="h2-sep">
