--- a/NetExplorer/templates/NetExplorer/contig_card.html
+++ b/NetExplorer/templates/NetExplorer/contig_card.html
@@ -161,9 +161,9 @@
                         <hr class="h2-sep">
                             
                         {% if node.database == "Smest" or node.database == "Dresden" %}
-                            <iframe id="jbrowser" width="100%" height="400px" src="https://compgen.bio.ub.edu/jbrowse/index.html?data=dd_Smes_g4&loc={{ node.symbol }}&tracks=Smes_g4 Genome Scaffolds,SmesG_v2 Reference Genes,Dresden&overview=1&highlight=&tracklist=1&highres=2"></iframe>    
+                            <iframe id="jbrowser" width="100%" height="400px" src="https://compgen.bio.ub.edu/jbrowse/index.html?data=dd_Smes_g4&loc={{ node.symbol }}&tracks=Smes_g4_scaffolds,SmesG_v2_genes,Dresden&overview=1&highlight=&tracklist=1&highres=2"></iframe>    
                         {% else %}
-                            <iframe id="jbrowser" width="100%" height="400px" src="https://compgen.bio.ub.edu/jbrowse/index.html?data=dd_Smes_g4&loc={{ node.symbol }}&tracks=Smes_g4 Genome Scaffolds,SmesG_v2 Reference Genes,Dresden,{{ node.database }}&overview=1&highlight=&tracklist=1&highres=2"></iframe>
+                            <iframe id="jbrowser" width="100%" height="400px" src="https://compgen.bio.ub.edu/jbrowse/index.html?data=dd_Smes_g4&loc={{ node.symbol }}&tracks=Smes_g4_scaffolds,SmesG_v2_genes,Dresden,{{ node.database }}&overview=1&highlight=&tracklist=1&highres=2"></iframe>
                         {% endif %}
 
                         <br>
