--- a/NetExplorer/templates/NetExplorer/experiment_dge_table.html
+++ b/NetExplorer/templates/NetExplorer/experiment_dge_table.html
@@ -8,7 +8,7 @@
                 <th>Condition 1</th>
                 <th>Condition 2</th>
                 <th>Log Fold Change</th>
-                <th>P-Value</th>
+                <th>Adj. P-Value</th>
             </tr>
         </thead>
         <tbody>
